--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       args:
         WORKDIR: ${WORKDIR}
         CONTAINER_PORT: ${CONTAINER_PORT}
+        API_URL: "http://localhost:${BACKEND_PORT}"
     command: yarn run dev
     volumes:
       - ./frontend:/${WORKDIR}
@@ -26,6 +27,7 @@ services:
     command: ash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     environment:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      API_DOMAIN: "localhost:${FRONTEND_PORT}"
     volumes:
       - ./backend:/${WORKDIR}
     ports:
