--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,17 @@
 FROM node:12-alpine
 ARG WORKDIR
 ARG CONTAINER_PORT
+ARG API_URL
 
 ENV HOME=/${WORKDIR} \
   LANG=C.UTF-8 \
   TZ=Asia/Tokyo \
-  HOST=0.0.0.0
+  HOST=0.0.0.0 \
+  API_URL=${API_URL}
 
 RUN echo ${HOME}
 RUN echo ${CONTAINER_PORT}
+RUN echo ${API_URL}
 
 WORKDIR ${HOME}
 EXPOSE ${CONTAINER_PORT}
